--- a/package.json
+++ b/package.json
@@ -7,19 +7,26 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-scripts": "4.0.1",
+    "sass": "^1.32.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:dev": "npm-run-all --parallel start watch:sass",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "predeploy": "npm run build && cp CNAME build/CNAME",
     "deploy": "gh-pages -d build",
-    "eject": "react-scripts eject"
+    "prettier": "prettier 'app/src/**/*.{js,jsx,html,css,scss}' --write",
+    "prettier:all": "prettier '**' --write",
+    "compile:sass": "sass src/assets/scss/main.scss src/assets/css/styles.css",
+    "watch:sass": "sass src/assets/scss/main.scss src/assets/css/styles.css --watch"
   },
   "eslintConfig": {
     "extends": [
