--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-github-calendar": "^2.0.1",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.1.0",
     "react-scripts": "4.0.1",
     "sass": "^1.32.2",
     "web-vitals": "^0.2.4"
